--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 asgiref==3.9.1
+Brotli==1.1.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+dj-database-url==3.0.1
 Django==5.2.4
-djangorestframework==3.16.0
-sqlparse==0.5.3
 django-cors-headers==4.3.1
+djangorestframework==3.16.0
+gunicorn==23.0.0
+h11==0.16.0
+idna==3.10
+packaging==25.0
+psycopg2-binary==2.9.10
 requests==2.31.0
+sqlparse==0.5.3
+urllib3==2.5.0
+uvicorn==0.35.0
+whitenoise==6.9.0
